@@ -23,10 +23,10 @@
 
 struct emulation
   {
-    void (*                   match) PARAMS ((const char *));
+    void (*                   match) (const char *);
     const char *              name;
-    void (*                   init) PARAMS ((void));
-    const char *(*            bfd_name) PARAMS ((void));
+    void (*                   init) (void);
+    const char *(*            bfd_name) (void);
     unsigned                  local_labels_fb : 1;
     unsigned                  local_labels_dollar : 1;
     unsigned                  leading_underscore : 2;
@@ -38,7 +38,7 @@ struct emulation
 
 COMMON struct emulation * this_emulation;
 
-extern const char * default_emul_bfd_name PARAMS ((void));
-extern void common_emul_init PARAMS ((void));
+extern const char * default_emul_bfd_name (void);
+extern void common_emul_init (void);
 
 #endif
